--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,6 @@ parallel-jobs = 1
 # you can use rvmm-config-gen to generate a config
 
 [Reddit]
-arch = "both"
+arch = "arm64-v8a"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit"
 uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
