--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,4 @@ parallel-jobs = 1
 arch = "arm64-v8a"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit"
 uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.reddit.frontpage"
